--- a/apps/landingpage/src/index.html
+++ b/apps/landingpage/src/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>HTML Ipsum Presents TEST</h1>
+    <h1>HTML Ipsum Presents TEST2</h1>
 
     <p>
       <strong>Pellentesque habitant morbi tristique</strong> senectus et netus
